# 21Simulator

./: CMakeLists.txt
src/: card_game_ai.cpp  card_game_ai.h  game_core.cpp  game_core.h  main.cpp
